--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -7,5 +7,37 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Cheesecake</h1>    
+    <img src="../cheesecake.jpg" alt="">
+    <h3>Muddy Chocolate Cheese Cake</h3>
+    <p>The special thing about this cheese cake is the hole in the center of it which you fill with melted chocolate . That's why it is called "Muddy Chocolate Cheese Cake." Enjoy it while its hot.</p>
+    <h2>Igredients</h2>
+    <ul>
+        <li>1 cup white sugar</li>
+        <li>⅓ cup butter</li>
+        <li>1 cup yogurt</li>
+        <li>1½ cups all-purpose flour</li>
+        <li>3 eggs</li>
+        <li>¼ teaspoon vanilla extract</li>
+        <li>2 teaspoons baking powder</li>
+        <li>12 (1.5 ounce) bars milk chocolate candy</li>
+        <li>2 cups cream cheese</li>
+        <li>3 eggs</li>
+        <li>¼ teaspoon vanilla extract</li>
+        <li>¾ cup white sugar</li>
+        <li>¼ cup confectioners' sugar for dusting</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Oil and flour a 9 inch round pan.</li>
+        <li>In a large bowl, cream the butter or margarine and 1 cup sugar. Beat in 3 eggs. Blend in yogurt. Combine the flour and baking powder; add to the creamed mixture. Stir in 1/4 teaspoon vanilla. Melt 6 chocolate bars; blend into the batter. Pour batter into prepared pan.
+
+        </li>
+        <li>Bake for 30 minutes, or until the cake tests done. Allow to cool for 10 minutes in the pan.
+        </li>
+        <li>Cut a hole in the center of the cake that does not go all the way through the cake. Melt another 6 sweet chocolate bars, and pour into the hole.</li>
+        <li>Beat cream cheese, 3 eggs, 1/4 teaspoon vanilla, and 3/4 cup sugar together until smooth. Pour over the cake. Bake for 20 minutes.</li>
+        <li>Sprinkle confectioners' sugar on the top of the cake. Return to oven. Bake until the sugar melts and browns. Serve.</li>
+    </ol>
 </body>
 </html>
