--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/cheesecake.html">Muddy Chocolate Cheese Cake</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/cheesecake.html">Muddy Chocolate Cheese Cake</a></li>
+    </ul>
 </body>
 </html>
